# QuanLyVatTu

./: .gitignore  CMakeLists.txt  cautrucdulieu.h  fileio.cpp  fileio.h  hoadonlogic.cpp  hoadonlogic.h  hoadonpage.cpp  hoadonpage.h  hoadonpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nhanvienlogic.cpp  nhanvienlogic.h  nhanvienpage.cpp  nhanvienpage.h  nhanvienpage.ui  thongkelogic.cpp  thongkelogic.h  thongkepage.cpp  thongkepage.h  thongkepage.ui  vattulogic.cpp  vattulogic.h  vattupage.cpp  vattupage.h  vattupage.ui
data/: nhanvien.txt  vattu.txt
